--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,15 @@
     font-family: 'titillium-web-semibold';
     src: url('../fonts/titillium/titilliumwebsemibold.ttf');
 }
+@font-face {
+    font-family: 'MalagaOT';
+    src: url('../fonts/Malaga/MalagaOT-RegItalic.otf');
+}
+@font-face {
+    font-family: 'MinionPro';
+    src: url('../fonts/MinionPro/MinionPro-Regular.otf');
+}
+
 body {
   font-size: 14px;
   background-color: #FFF;
@@ -205,7 +214,7 @@ header{
     font-size: 1.26em;
     border: transparent;
     box-shadow: 2px 10px 10px rgba(98,110,197,0.6);
-    padding-bottom: 5px;
+    padding-bottom: 3px;
     letter-spacing: 0.02em;
     outline: none;
   }
@@ -219,7 +228,6 @@ header{
     font-size: 1.55em;
     border: transparent;
     box-shadow: 2px 10px 10px rgba(98,110,197,0.6);
-    padding-bottom: 2px;
     letter-spacing: 0.02em;
     outline: none;
   }
@@ -267,14 +275,14 @@ padding: 2px;
   background-color: #FFCE45;
 }
 .inscription_2{
-  height: 424px;
+  height: 426px;
   width:74.2%;
   margin: auto;
   display:flex;
   justify-content: space-between;
 }
 div[class^="inscription_2_"]{
-  margin-top: 8.8%;
+  margin-top: 8.95%;
   text-align: left;
 }
 .img_inscription_2_1{
@@ -331,15 +339,17 @@ p[class^="advantages_texts"]{
   top: -15.1% !important;
   letter-spacing: -0.004em !important;
 }
-.advantages_texts_2{
-  left: 10% !important;
-  top: -5.5% !important;
+.advantages_texts_2 {
+    left: 10% !important;
+   top: -5.5% !important;
 }
 
 .inscription_2_3{
   position:   relative;
   left: -1.9%;
   top: 0.95%;
+  margin-top: 8.8% !important;
+
 }
 .img_inscription_2_3{
  position: relative;
@@ -367,26 +377,26 @@ main{
    position: relative;
    height: 9.14%;
    width: 0px;
-   top: -19.27%;
+   top: -33.18%;
    border-left: 1px #B9B9B9 solid;
    left: 39.67%;
 }
 
 .vert_line_2{
-  position: relative;
-  height: 19.69%;
-  top: -22.82%;
-  border-left: 1px #B9B9B9 solid;
-  left: 63.67%;
-  width: 0px;
+    position: relative;
+    height: 19.69%;
+    top: -36.7%;
+    border-left: 1px #B9B9B9 solid;
+    left: 63.67%;
+    width: 0px;
 }
  .hor_line_1{
-   position: relative;
-   height: 0;
-   width: 16.36%;
-   border-top: 1px #B9B9B9 solid;
-   left: 83.45%;
-   top: -42.1%;
+    position: relative;
+    height: 0;
+    width: 10.66%;
+    border-top: 1px #B9B9B9 solid;
+    left: 89.3%;
+    top: -56.35%;
 }
 .second_inscription{
   margin-top: -0.8%;
@@ -409,12 +419,12 @@ main{
   color:#f65151
 }
 .container_with_line{
-  width: 332px;
-  height: 60px;
-  margin-left: 54.12%;
-  margin-top: 1.3%;
-  border: 1px #B9B9B9 solid;
-  border-radius: 30px;
+    width: 332px;
+    height: 60px;
+    margin-left: 54.12%;
+    margin-top: 1.3%;
+    border: 1px #B9B9B9 solid;
+    border-radius: 30px;
 }
 .with_line_par{
   font-family: titillium-web-regular, sans-serif;
@@ -427,4 +437,342 @@ main{
 .newspapers{
   margin-top: 3.2%;
   margin-left: 1.2%;
+}
+ .hor_line_2{
+    position: relative;
+    height: 0;
+    width: 54.1%;
+    border-top: 1px #B9B9B9 solid;
+    top: -35.3%;
+}
+
+.container_3{
+    position: relative;
+    top: -28%;
+    width: 100%;
+    height: 32%;
+    background-image: url(../assets/img/notebook.jpg);
+    background-position: 78% 46.5%;
+    background-repeat: no-repeat;
+
+}
+
+.quote{
+    position: relative;
+    top: 4%;
+    width: 32%;
+    height: 23%;
+    left: 20%;
+    display: flex;
+}
+
+.dot_block{
+  margin-top: 13px;
+  margin-left: 4px; 
+  height: 57px;
+}
+.dot_block>ul{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.dot_1{
+    height: 13px;
+    width: 13px;
+    border-radius: 100%;
+    background-color: #000;
+}
+
+.dot_2{
+    margin-left: 1px; 
+    height: 11px;
+    width: 11px;
+    border-radius: 100%;
+    background-color: #BABABA;
+}
+
+.dot_3{
+     margin-left: 1px; 
+    height: 11px;
+    width: 11px;
+    border-radius: 100%;
+    background-color: #BABABA;
+}
+
+.quote_text{
+    margin-left: 25px;
+    margin-top: 6px;
+}
+.quote_text>p{
+   font-size: 1.71em;
+  font-family: MalagaOT, sans-serif;
+  letter-spacing: 0.014em;
+  line-height: 1.31em;
+  color: #101010;
+}
+
+.quote_text>p>span{
+  font-size: 0.7em;
+  letter-spacing: -0.006em;
+  color: #727272;
+}
+.container_3_1{
+    position: relative;
+    top: 19.8%;
+    width: 25%;
+    height: 33%;
+    left: 37%;
+}
+.container_3_1_h3{
+   margin-left: 109px;
+   font-size: 2.60em;
+   font-family: titillium-web-regular, sans-serif;
+   color: #535353;
+}
+.container_3_1_p{
+  text-align: right;
+  margin-top: 18px;
+  margin-right: 13px;
+  font-size: 1.14em;
+  font-family: titillium-web-regular, sans-serif;
+  letter-spacing: 0.01em;
+  line-height: 1.4em;
+  color: #959393;
+}
+.container_3_1_button1{
+    border-radius: 6px;
+    margin-left: 68px;
+    margin-top: 28px;
+    height: 55px;
+    width: 180px;
+    margin-right: 9px;
+    background-image: url(../assets/img/apple_button.jpg);
+    outline: none;
+}
+.container_3_1_button2{
+    height: 55px;
+    width: 180px; 
+    border-radius: 6px;
+    background-image: url(../assets/img/google_button.jpg);
+    outline: none; 
+}
+
+.hor_line_3_1{
+    position: relative;
+    height: 0px;
+    width: 50.3%;
+    border-top: 1px #B9B9B9 solid;
+    left: 22.2%;
+    top: 38.9%;
+
+}
+.hor_line_3_2{
+    position: relative;
+    height: 0px;
+    width: 25.0%;
+    border-top: 1px #B9B9B9 solid;
+    left: 74.7%;
+    top: 38.9%;
+
+}
+.container_4{
+  position: relative;
+  top: -26.2%;
+  left: 33.9%;
+  width: 60%;
+  height: 10%;
+}
+.container_4_1_h3{
+   font-size: 2.60em;
+   font-family: titillium-web-regular, sans-serif;
+   color: #535353;
+   letter-spacing: 0.003em;
+ }
+ .container_4_1_p{
+    margin-left: -32px;
+    margin-top: 8px;
+    font-size: 2.07em;
+    font-family: titillium-web-regular, sans-serif;
+    color: #7c7c7c;
+    letter-spacing: 0.007em
+}
+
+  .container4_button1{
+    margin-top: 41px;
+    margin-left: 58px;
+    background: linear-gradient(to bottom right, #646C92 0%, #5F2F6A 100%);
+    height: 56px;
+    width: 247px;
+    color: #FFF;
+    border-radius: 50px;
+    font-family: titillium-web-bold, sans-serif;
+    font-size: 1.26em;
+    border: transparent;
+    box-shadow: 2px 10px 10px rgba(98,110,197,0.6);
+    letter-spacing: 0.02em;
+    outline: none;
+    
+  }
+
+  .container4_button2{
+    margin-top: 41px;
+    background: linear-gradient(to bottom right, #35BCE0 0%, #5E7BEA 100%);
+    margin-left: 50px;
+    height: 56px;
+    width: 166px;
+    color: #FFF;
+    border-radius: 50px;
+     font-family: titillium-web-bold, sans-serif;
+    font-size: 1.26em;
+    border: transparent;
+    box-shadow: 2px 10px 10px rgba(98,110,197,0.6);
+    letter-spacing: 0.03em;
+    outline: none;
+  }
+
+.fa-cloud-upload-alt{
+    margin-bottom: 13px;
+    margin-left: 1px;
+    font-size: 0.88em;
+    margin-right: 5px;   
+}
+
+
+.fa-dollar-sign{
+    margin-bottom: 9px;
+    margin-left: 2px;
+    font-size: 0.88em;
+    margin-right: 5px; 
+}
+
+.container4_button2>span{
+  position: relative;
+  top: 2px;  
+  letter-spacing: 0.03em;
+
+}
+
+.container4_button1>span{
+  position: relative;
+  top: 2px;  
+  letter-spacing: 0.03em;
+
+}
+.container_4_button{
+  height: 60%;
+  display: flex;
+}
+footer{
+  margin: auto;
+  height: 628px;
+  width:1800px;
+}
+.hor_line_5_1{
+    height: 4%;
+    width: 77.77%;
+    border-bottom: 1px #B9B9B9 solid;
+}
+.footer_top_text{
+  margin-top: 1.1%;
+  margin-left: 63.5%;
+  width: 13%;
+  font-family: titillium-web-regular, sans-serif;
+  font-size: 1em;
+  color: #7a7a7a;
+  letter-spacing: 0.008em;
+}
+.sponsor_list{
+    width: 51%;
+    margin-top: 0.55%;
+    margin-left: 25.8%;
+}
+.contacts_and_links{
+  margin-top: 5%;
+  height: 300px;
+  width: 1800px;
+  display: flex;
+}
+
+.mail{
+  height: 46%;
+  margin-top: 3.5%;
+  margin-left: 12.2%;
+  width: 16%;
+  letter-spacing: 0.008em;
+  line-height: 1.7em;
+}
+.mail>ul{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.mail>ul>li{
+  color:#5c5c5c;
+  font-family: titillium-web-regular, sans-serif;
+  font-size: 1em;
+}
+.mail>ul>li>a{
+  color:#5c5c5c;
+  font-family: titillium-web-bold, sans-serif;
+}
+.for_supp{
+  margin-top: 7.5%;
+  font-family: titillium-web-regular, sans-serif;
+}
+.for_supp>a{
+  font-family: titillium-web-bold, sans-serif;
+  text-decoration: underline;
+  color: #5c5c5c;
+}
+.links{
+    width: 29.2%;
+    margin-top: 3.799%;
+    margin-left: 18.9%;
+}
+.links_container{
+  text-align: right;
+  display: flex;
+  height: 68%;
+  justify-content: space-between;
+  font-family: titillium-web-bold, sans-serif;
+  
+
+}
+.links_container>div>h4{
+  font-size: 1.286em;
+  color: #7a7a7a;
+}
+
+.links_container>div>ul>li>a{
+  font-family: titillium-web-regular, sans-serif;
+  font-size: 1em;
+  color: #5c5c5c;
+}
+.links_container_1>ul{
+  margin-top: 44.3%;
+  height: 67%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  letter-spacing: 0.05em;
+
+}
+
+.links_container_2>ul{
+  margin-top: 22.3%;
+  height: 67%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  letter-spacing: 0.03em;
+}
+.links_container_2{
+  margin-left: 3%;
+}
+
+.links_container_2{
+  margin-left: 3%;
 }
